# DualGraphDirCon

./: degree_fit.ipynb  pyproject.toml
dgdc/: __init__.py  dual_conti.py
dgdc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dual_graph_algo/: dual_conti.py
notebooks_lasse/: dual_G_w_dir_con.ipynb  hovding.ipynb  sirpenski_carpet.ipynb
scripts/: get_city_list.py  regime.py  regime_old.py
