[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dgdc"
version = "0.1.0"
description = "Dual graph continuity analysis for street networks"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "networkx",
    "shapely",
    "geopandas",
    "pandas",
    "momepy",
    "osmnx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dgdc*"]
